--- a/client/public/index.html
+++ b/client/public/index.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" />
     <title>React App</title>
   </head>
-  <body>
+  <body style="overflow-x: hidden;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
